fixed some bugs regarding search params and shifted to route handlers due to server action issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -180,6 +180,9 @@
   .tiptap-codeblock code {
     @apply bg-transparent;
   }
+  pre {
+     @apply block whitespace-pre font-mono bg-zinc-900 text-white text-sm px-4 py-3 rounded-md  ;
+  }
 
   .tiptap-codeblock br {
     @apply inline;
